feat: move tasks to seperate files

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.cpp" "sensor.cpp"
+idf_component_register(SRCS "serial_task.cpp" "main.cpp" "sensor.cpp" "sampler_task.cpp"
                     INCLUDE_DIRS ".")
